--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-         <li><%= link_to "Home", welcome_index_path %></li>
-         <li><%= link_to "About", welcome_about_path %></li>
-         <li><%= link_to "FAQ", welcome_faq_path %></li>
-         <li><%= link_to "Contact", welcome_contact_path %></li>
+         <li><%= link_to "Home", root_path %></li>
+         <li><%= link_to "About", about_path %></li>
+         <li><%= link_to "FAQ", faq_path %></li>
+         <li><%= link_to "Contact", contact_path %></li>
          <% if user_signed_in? %>
           Signed in as: <strong><%= current_user.email %></strong> |
           <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
@@ -25,7 +25,7 @@
         <% end %>
       </ul>
       <%= yield %>
-      
+
     </div>
   </body>
 </html>
