--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<br>
+<div class="jumbotron">
+  <h1>Blocipedia</h1>
+  <p>Blocipedia is a resource for sharing wikis with your friends!</p>
+  <p>
+    <%= link_to 'Sign-In', new_user_session_path %> or
+    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>Share how-to's with ease</h2>
+    <p>.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Add to the worlds knowledge base</h2>
+    <p></p>
+  </div>
+  <div class="col-md-4">
+    <h2>Help people do stuff</h2>
+    <p></p>
+  </div>
+</div>
