--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Wikis#edit</h1>
-<p>Find me in app/views/wikis/edit.html.erb</p>
+<h1>Edit Wiki</h1>
+
+<div class="row">
+  <div class="col-md-4">
+    <p>Guidelines for wikis:</p>
+    <ul>
+      <li>Make sure the wiki is educational.</li>
+      <li>Be verbose.</li>
+      <li>Write like your audience is a 5 year old.</li>
+    </ul>
+  </div>
+  <div class="col-md-8">
+      <%= render partial: 'form', locals: { wiki: @wiki } %>
+  </div>
+</div>
