--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Wikis#index</h1>
-<p>Find me in app/views/wikis/index.html.erb</p>
+<h1>Wikis</h1>
+
+<div class="row">
+  <div class="col-md-8">
+<!-- #7 -->
+    <% @wikis.each do |wiki| %>
+      <div class="media">
+        <div class="media-body">
+          <h4 class="media-heading">
+<!-- #8 -->
+            <%= link_to wiki.title, wiki %>
+          </h4>
+          <small>
+            <%= wiki.body %>
+          </small>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <% if user_signed_in? %>
+    <div class="col-md-4">
+      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+    </div>
+  <% end %>
+</div>
