--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -2,24 +2,27 @@
 
 <div class="row">
   <div class="col-md-8">
-<!-- #7 -->
+
     <% @wikis.each do |wiki| %>
-      <div class="media">
-        <div class="media-body">
-          <h4 class="media-heading">
-<!-- #8 -->
-            <%= link_to wiki.title, wiki %>
-          </h4>
-          <small>
-            <%= wiki.body %>
-          </small>
-        </div>
+    <div class="media">
+      <div class="media-body">
+        <h4 class="media-heading">
+
+          <%= link_to wiki.title, wiki %>
+        </h4>
+        <small>
+          <%= wiki.body %>
+        </small>
+        <%= link_to 'Show', wiki %>
+        <%= link_to 'Edit', edit_wiki_path(wiki) %>
+        <%= link_to 'Destroy', wiki, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
+    </div>
     <% end %>
   </div>
   <% if user_signed_in? %>
-    <div class="col-md-4">
-      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-    </div>
+  <div class="col-md-4">
+    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+  </div>
   <% end %>
 </div>
