--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,14 +33,15 @@
           <% if user_signed_in? %>
           Signed in as:
           <strong><%= current_user.email %></strong>
-          |
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+          Membership Level:
+          <small class="text-uppercase"><%= current_user.role %></small>
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav navbar-link' %>
           -
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'nav navbar-btn'  %>
         <% else %>
-          <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %>
-          -
-          <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+          <%= link_to "Sign Up", new_user_registration_path, :class => 'nav navbar-link'  %>
+          -----------------------
+          <%= link_to "Sign In", new_user_session_path, :class => 'nav navbar-link'  %>
           <% end %>
 
         </div>
