--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,10 +2,20 @@
 <div class="jumbotron">
   <h1>Blocipedia</h1>
   <p>Blocipedia is a resource for sharing wikis with your friends!</p>
+  <% if user_signed_in? %>
   <p>
-    <%= link_to 'Sign-In', new_user_session_path %> or
-    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+    <%= link_to 'Upgrade your account', new_charge_path, class: 'btn btn-lg btn-primary' %>
+     to access premium feautures today!
   </p>
+
+</p>
+<% else %>
+<p>
+  <%= link_to 'Sign-In', new_user_session_path %>
+  or
+  <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
+  for a free account today!
+  <% end %>
 </div>
 
 <div class="row">
