added private wiki feature

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
 
 <h3>Downgrade my account</h3>
 
-<p>Unhappy? <%= button_to "Downgrade my account", downgrade_path, data: { confirm: "Are you sure?" }, method: :get %></p>
+<p>Unhappy? <%= button_to "Downgrade my account", downgrade_path, data: { confirm: "Are you sure?" }, method: :post %></p>
 
 
 <h3>Cancel my account</h3>
