--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
   <div class="col-md-8">
-    <p><%= @wiki.body %></p>
+    <p><%= markdown(@wiki.body) %></p>
 
 
   </div>
