--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,30 +1,44 @@
 <%= form_for [wiki] do |f| %>
-   <% if wiki.errors.any? %>
-      <div class="alert alert-danger">
-        <h4><%= pluralize(wiki.errors.count, "error") %>.</h4>
-        <ul>
-          <% wiki.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
+<% if wiki.errors.any? %>
+<div class="alert alert-danger">
+  <h4><%= pluralize(wiki.errors.count, "error") %>.</h4>
+  <ul>
+    <% wiki.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+<%= form_group_tag(wiki.errors[:title]) do %>
+<%= f.label :title %>
+<%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
+<% end %>
+<%= form_group_tag(wiki.errors[:body]) do %>
+<%= f.label :body %>
+<%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
+<% end %>
+<% if current_user.admin? || current_user.vip? %>
+<div class="form-group">
+    <strong>Add Collaborators:</strong>
+    <% collaborator_ids = @wiki.collaborator_ids %>
+
+    <% User.all.each do |user| %>
+      <div class="user">
+        <%= check_box_tag "wiki[collaborator_ids][]", user.id, collaborator_ids.include?(user.id) %>
+        <%= user.email %>
       </div>
     <% end %>
-    <%= form_group_tag(wiki.errors[:title]) do %>
-      <%= f.label :title %>
-      <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
-    <% end %>
-    <%= form_group_tag(wiki.errors[:body]) do %>
-      <%= f.label :body %>
-      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
-    <% end %>
-    <% if current_user.admin? || current_user.vip? %>
-  <div class="form-group">
-    <%= f.label :private, class: 'checkbox' do %>
-      <%= f.check_box :private %> Private wiki
-    <% end %>
   </div>
+<div class="form-group">
+  <div></div>
+  <%= f.label :private, class: 'checkbox' do %>
+  <%= f.check_box :private %>
+  Private wiki
+  <% end %>
+</div>
+
 <% end %>
-   <div class="form-group">
-     <%= f.submit "Save", class: 'btn btn-success' %>
-   </div>
- <% end %>
+<div class="form-group">
+  <%= f.submit "Save", class: 'btn btn-success' %>
+</div>
+<% end %>
