--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -18,11 +18,16 @@
 <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
 <% end %>
 <% if current_user.admin? || current_user.vip? %>
-<div class="form-group">
-    <strong>Add Collaborators:</strong>
+<strong>Collaborators:</strong>
+<% possible_collaborators = User.all - [current_user] %>
+<% possible_collaborators.each do |user| %>
+<%= check_box_tag "collaborators[]", user.id, wiki.collaborators.include?(user)  %>
+<%= user.email %>
+<% end %>
+<!-- <div class="checkbox">
     <%= f.collection_check_boxes :collaborators, User.all - [current_user], :id, :email, include_hidden: false %>
-  </div>
-<div class="form-group">
+  </div> -->
+<div class="checkbox">
   <div></div>
   <%= f.label :private, class: 'checkbox' do %>
   <%= f.check_box :private %>
